feat(examples): add navigation and a gallery to view demos

--- a/examples/react-examples/package.json
+++ b/examples/react-examples/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@useflow/react": "workspace:*",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "react-router": "^7.9.4"
   },
   "devDependencies": {
     "@types/node": "catalog:",
