feat(examples): use shadcn & tailwind to update styling

--- a/biome.json
+++ b/biome.json
@@ -32,6 +32,11 @@
     "indentStyle": "space",
     "indentWidth": 2
   },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
+  },
   "overrides": [
     {
       "includes": ["**/*.test.{ts,tsx}"],
