feat: deploy docs with alchemy

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
       "!**/.expo",
       "!**/env.d.ts",
       "!**/coverage",
-      "!**/.astro"
+      "!**/.astro",
+      "!**/.alchemy"
     ]
   },
   "linter": {
