--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,7 +31,7 @@
     "jsdom": "catalog:"
   },
   "peerDependencies": {
-    "react": "^19",
+    "react": "^18.0.0 || ^19.0.0",
     "typescript": "^5"
   }
 }
