chore(docs): allow important styles

--- a/biome.json
+++ b/biome.json
@@ -59,6 +59,16 @@
           }
         }
       }
+    },
+    {
+      "includes": ["apps/docs/**/*.css"],
+      "linter": {
+        "rules": {
+          "complexity": {
+            "noImportantStyles": "off"
+          }
+        }
+      }
     }
   ]
 }
