--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/starlight": "^0.36.1",
     "astro": "^5.6.1",
     "sharp": "^0.34.2",
