--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,5 +15,10 @@
     "astro": "^5.6.1",
     "sharp": "^0.34.2",
     "starlight-theme-obsidian": "^0.4.1"
+  },
+  "devDependencies": {
+    "@astrojs/starlight-tailwind": "^4.0.2",
+    "@tailwindcss/vite": "^4.1.16",
+    "tailwindcss": "^4.1.16"
   }
 }
