--- a/examples/react-examples/package.json
+++ b/examples/react-examples/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "check-types": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "clean": "rm -rf node_modules dist .turbo"
