--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "check": "biome check --write .",
     "build": "turbo build",
     "build:docs": "bun run build --filter=docs",
-    "typecheck": "turbo typecheck --log-order=stream",
+    "typecheck": "turbo typecheck",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
