--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,13 +1,52 @@
 {
   "name": "@useflow/react",
   "version": "0.0.0",
+  "description": "Type-safe, declarative multi-step flows for React",
+  "author": "Brian Cheung <bcheung.dev@gmail.com> (https://github.com/bcheung)",
+  "license": "MIT",
+  "homepage": "https://docs.useflow.sh",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/useflow-sh/useflow.git",
+    "directory": "packages/react"
+  },
+  "bugs": {
+    "url": "https://github.com/useflow-sh/useflow/issues"
+  },
+  "keywords": [
+    "useflow",
+    "react",
+    "flow",
+    "multi-step",
+    "wizard",
+    "stepper",
+    "onboarding",
+    "checkout",
+    "survey",
+    "typescript",
+    "state-machine",
+    "form",
+    "navigation",
+    "analytics"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./src/index.ts"
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
     }
   },
   "type": "module",
+  "sideEffects": false,
   "scripts": {
     "build": "tsdown",
     "typecheck": "tsc --noEmit",
