ci: run ci on changeset branches and opened prs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: CI
 
 on:
   pull_request:
+    types:
+      - opened
+      - synchronize
   push:
     branches:
       - main
+      - "changeset-release/**"
 
 jobs:
   ci:
