docs: add breaking changes warning for beta release

--- a/biome.json
+++ b/biome.json
@@ -55,7 +55,8 @@
       "linter": {
         "rules": {
           "correctness": {
-            "noUnusedImports": "off"
+            "noUnusedImports": "off",
+            "noUnusedVariables": "off"
           }
         }
       }
